

                                        XFLR5

                     A tool for the design of Airfoils, Wings and Planes
                          operating at low Reynolds numbers

								 Copyright (C) 2003-2017

                                     Andre Deperrois


*******************************************************************************


xflr5 v6.39 August xxxth, 2017
	- Improved the GUI for the plot of BL results in the XFoil Direct Analysis module; corrected a few bugs at the same time
	- modified the calculation of the lift coefficient at each span station in VLM and Panel Analysis.
	  Is now F.dot(SurfaceNormal)/q.S instead of F.dot(WindNormal)/q.S formerly. Increases slightly the viscous drag
	  and the viscous moments as a side effect.
	- implemented a more robust process to save the project files
	- disabled the Neumann boundary condition for the 3d panel method
	- removed the extra 180/PI factor in the calculation of stability time response to initial conditions


xflr5 v6.38 June 5th, 2017
	- fixed the random behaviour bug in the OpenGL view


xflr5 v6.37 May 28th, 2017
	- added a verification of the OpenGL version at startup
	- fixed two bad crash bugs when derotating a foil and when defining a flap


xflr5 v6.36 May 22nd, 2017 - limited release only


xflr5 v6.35 May 15th, 2017
	- Added an option to adjust the number of worker threads in a foil multithreaded analysis
	- Fixed some memory leak & overflow issues in foil analysis; improves the stability of the analysis
	- Fixed some font issues for MacOS
	- Other minor improvements


xflr5 v6.34 April 15th, 2017 - limited release only
	- Forced the default renderer to be OpenGL and not Angle on Windows desktops
	- Added an option to export time graphs to text files


xflr5 v6.33 March 26th, 2017
	- corrected the calculation of the downwash and induced angle for the VLM method. Was twice what it should be. No impact on other results.