@@ -12,7 +12,7 @@
 #define GUI_PARAMS_H
 
 
-#define VERSIONNAME     "xflr5 v6.39"
+#define VERSIONNAME     "xflr5 v6.40"
 
 //General
 #define MAXRECENTFILES         8  /**< Defines the maximum number of file names in the recent file list */
